UserからAutherに定義を変更
