# apps/backend/src/features/authors/dto/author-response.dto.ts
@@ -1,0 +1,4 @@
+export class AuthorResponseDto {
+  id!: number;
+  name!: string | null;
+}
