# apps/backend/src/features/authors/dto/create-author.dto.ts
@@ -1,0 +1,7 @@
+import { IsOptional, IsString } from 'class-validator';
+
+export class CreateAuthorDto {
+  @IsString()
+  @IsOptional()
+  name?: string;
+}
