# apps/backend/src/features/users/dto/create-user.dto.ts
@@ -1,10 +1,0 @@
-import { IsEmail, IsOptional, IsString } from 'class-validator';
-
-export class CreateUserDto {
-  @IsEmail()
-  email!: string;
-
-  @IsString()
-  @IsOptional()
-  name?: string;
-}
