# apps/backend/src/features/users/dto/user-response.dto.ts
@@ -1,5 +1,0 @@
-export class UserResponseDto {
-  id!: number;
-  email!: string;
-  name!: string | null;
-}
