# packages/api-types/src/__generated__/openapi.json
@@ -15,9 +15,9 @@
         ]
       }
     },
-    "/users": {
+    "/authors": {
       "get": {
-        "operationId": "UsersController_findAll",
+        "operationId": "AuthorsController_findAll",
         "parameters": [],
         "responses": {
           "200": {
@@ -27,7 +27,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/UserResponseDto"
+                    "$ref": "#/components/schemas/AuthorResponseDto"
                   }
                 }
               }
@@ -35,18 +35,18 @@
           }
         },
         "tags": [
-          "users"
+          "authors"
         ]
       },
       "post": {
-        "operationId": "UsersController_create",
+        "operationId": "AuthorsController_create",
         "parameters": [],
         "requestBody": {
           "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateUserDto"
+                "$ref": "#/components/schemas/CreateAuthorDto"
               }
             }
           }
@@ -57,20 +57,20 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/UserResponseDto"
+                  "$ref": "#/components/schemas/AuthorResponseDto"
                 }
               }
             }
           }
         },
         "tags": [
-          "users"
+          "authors"
         ]
       }
     },
-    "/users/{id}": {
+    "/authors/{id}": {
       "get": {
-        "operationId": "UsersController_findOne",
+        "operationId": "AuthorsController_findOne",
         "parameters": [
           {
             "name": "id",
@@ -87,18 +87,18 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/UserResponseDto"
+                  "$ref": "#/components/schemas/AuthorResponseDto"
                 }
               }
             }
           }
         },
         "tags": [
-          "users"
+          "authors"
         ]
       },
       "patch": {
-        "operationId": "UsersController_update",
+        "operationId": "AuthorsController_update",
         "parameters": [
           {
             "name": "id",
@@ -114,7 +114,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/UpdateUserDto"
+                "$ref": "#/components/schemas/UpdateAuthorDto"
               }
             }
           }
@@ -125,18 +125,18 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/UserResponseDto"
+                  "$ref": "#/components/schemas/AuthorResponseDto"
                 }
               }
             }
           }
         },
         "tags": [
-          "users"
+          "authors"
         ]
       },
       "delete": {
-        "operationId": "UsersController_remove",
+        "operationId": "AuthorsController_remove",
         "parameters": [
           {
             "name": "id",
@@ -153,14 +153,14 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/UserResponseDto"
+                  "$ref": "#/components/schemas/AuthorResponseDto"
                 }
               }
             }
           }
         },
         "tags": [
-          "users"
+          "authors"
         ]
       }
     },
@@ -324,14 +324,11 @@
   "servers": [],
   "components": {
     "schemas": {
-      "UserResponseDto": {
+      "AuthorResponseDto": {
         "type": "object",
         "properties": {
           "id": {
             "type": "number"
-          },
-          "email": {
-            "type": "string"
           },
           "name": {
             "type": "string",
@@ -340,32 +337,20 @@
         },
         "required": [
           "id",
-          "email",
           "name"
         ]
       },
-      "CreateUserDto": {
+      "CreateAuthorDto": {
         "type": "object",
         "properties": {
-          "email": {
-            "type": "string",
-            "format": "email"
-          },
           "name": {
             "type": "string"
           }
-        },
-        "required": [
-          "email"
-        ]
+        }
       },
-      "UpdateUserDto": {
+      "UpdateAuthorDto": {
         "type": "object",
         "properties": {
-          "email": {
-            "type": "string",
-            "format": "email"
-          },
           "name": {
             "type": "string"
           }
